--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ self.addEventListener('fetch',
         <section>
           <table class="fade-in-table" cellspacing="0">
             <tr><th></th><th>Web Workers</th><th>Service Workers</th></tr>
-            <tr><th class="fragment">Tab control</th><td class="fragment">Many per tab</td><td class="fragment">One per scope*</td></tr>
+            <tr><th class="fragment">Tab control</th><td class="fragment">Many per tab</td><td class="fragment">One for all tabs*</td></tr>
             <tr><th class="fragment">Lifespan</th><td class="fragment">Same as tab</td><td class="fragment">Independent</td></tr>
             <tr><th class="fragment">Good for</th><td class="fragment">Parallelism</td><td class="fragment">Offline</td></tr>
           </table>
