--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ $.getJSON('/payload.json', function (response) {
 
 
         <section>
-          <h3>Stuff that blocks the DOM</h3>
+          <h3>Stuff that can block the DOM</h3>
           <ul>
             <li class="fragment">IndexedDB</li>
             <li class="fragment">XHR</li>
