--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ $.getJSON('/payload.json', function (response) {
         </section>
 
         <section>
-          <h2>XMLHttpRequest</h2>
-          <h4>(Yes, even async)</h4>
+          <h2>AJAX</h2>
+          <h4>(Yes, even async XHR)</h4>
         </section>
 
         <section>
@@ -217,7 +217,7 @@ $.getJSON('/payload.json', function (response) {
           <h3>Stuff that can block the DOM</h3>
           <ul>
             <li class="fragment">IndexedDB</li>
-            <li class="fragment">XHR</li>
+            <li class="fragment">AJAX</li>
             <li class="fragment">fetch</li>
             <li class="fragment">Garbage collection</li>
             <li class="fragment"><strong>JavaScript!</strong></li>
