--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
           <img class="no-border" style="max-width:800px" src="img/edgems.png" alt="edge.ms website"/>
         </section>
 
+<section>
+<h3>Site Scan</h3>
+<img class="no-border" alt="Edge Site Scan page" src="img/site_scan.png"/>
+</section>
+<section>
+<img class="no-border" alt="Edge Site Scan page results" src="img/site_scan2.png" style="max-height:600px"/>
+</section>
+
         <section>
           <h2>Why Web Workers?</h2>
         </section>
