--- a/index.html
+++ b/index.html
@@ -94,11 +94,10 @@
         </section>
 
 <section>
-<h3>Site Scan</h3>
-<img class="no-border" alt="Edge Site Scan page" src="img/site_scan.png"/>
+<img alt="Edge Site Scan page" src="img/site_scan.png"/>
 </section>
 <section>
-<img class="no-border" alt="Edge Site Scan page results" src="img/site_scan2.png" style="max-height:600px"/>
+<img alt="Edge Site Scan page results" src="img/site_scan2.png" style="max-height:600px"/>
 </section>
 
         <section>
